(09/Dec/2022)
- Get a better looking polybar in Aline rice.
- Fixed and improved colorscheme in terminal and polybar for Aline Rice.
- Added new wallpaper to Karla rice.
- Modified Hide unhide bar values for aline rice.

(30/Nov/2022)
- Dropped Arian8j2's picom fork. Now "official" picom from Arch repos is used. Because has a lot of fixes and stability.
- Massive update to Jan Rice, now suck less...
  - Added 2 new wallpapers to Jan Rice.
  - Polybar redesigned, new color scheme in polybar.
  - Dropped lilian font in terminal, now uses monocraft font
- Network module on all rices with polybar now get default interface (wifi or ethernet) with internet access and use it on the network module. Thanks to mariod8 (https://github.com/mariod8)

(31/Oct/2022)
- Fixes in dunst config, font and icons source.

(26/Oct/2022)
- Massive update to z0mbi3 Rice. The Dashboard now is better coded, optimized and faster.
  - It has been redesigned, looks better and now will properly adapt to your resolution and adapt to widget sizes.
  - Changed profile.svg to png and redesigned default profile pic. The same changes with this image has been added to Pamela, Andrea & z0mbi3 rices.
  - Weather script now works faster and better. Moved from z0mbi3 scripts dir to main bspwm scripts dir.
  - Pamela & Andrea rices has been polished. "Only to adapt with the new png profile pic"

(13/Oct/2022)
- Hide, Unhide bars in Karla Rice now works as spected.

(11/Oct/2022)
- New Karla Rice!
- [z0mbi3 Rice] Added right click en arch logo to deploy rice selector. Added new wallpaper, optmized process when launch the rice
- Screenshooter now saves screenshots in png format.


(22/Sept/2022)
- Updated README Troubleshooting section

(19/Sept/2022)
- Updated Weather Module for polybar rices. 
- WeatherMini script for polybar now show error message.
- ttf-joypixels added to dependencies.
- Removed JetBrainsMono Nerd Font from fonts dir, now is installed with dependencies.