@@ -340,7 +340,7 @@ chmod +x ~/.config/bspwm/rices/z0mbi3/dashboard/scripts/weather
 Yes the values are in my city "Mexico City" you need to edit ~/.config/bspwm/scripts/WeatherMini to set your city
 In line 3 you will find this line weather=$(curl -s wttr.in/**Mexico**?format=3) You need to write your city, or postal code, please refer to the [wttr.in Help](https://wttr.in/:help)
 
-For the eww widget in z0mbi3 rice you need to edit ~/.config/bspwm/rices/z0mbi3/dashboard/scripts/weather in line 13 you need to change the ID for the ID of your city, you can get it from [openweathermap](https://openweathermap.org/)
+For the eww widget in z0mbi3 rice you need to edit ~/.config/bspwm/scripts/weather in line 12 you need to change the name of your city, you can get it from [openweathermap](https://openweathermap.org/)
 
 
 ## Credits
